--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "color-to-name": "^1.1.0",
     "colornames": "^1.1.1",
     "common-tags": "^1.8.0",
+    "cors": "^2.8.5",
     "didyoumean2": "^4.2.0",
     "discord-akairo": "^8.1.0",
+    "discord-oauth2": "^2.6.0",
     "discord.js": "^12.5.3",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lavasfy": "^2.2.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^5.12.7",
     "node-fetch": "^2.6.1",
     "node-osu": "^2.2.1",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "string-progress": "^1.8.9",
     "ytdl-core": "^4.7.0"
   },
